# gateway

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  cliff.toml  dist-workspace.toml  fly.toml  gateway.example.toml  release-plz.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  release-plz.yml
crates/accelmars-gateway/: CHANGELOG.md  Cargo.toml
crates/accelmars-gateway-core/: CHANGELOG.md  Cargo.toml  README.md
crates/accelmars-gateway-core/src/: adapter.rs  lib.rs  metadata.rs  mock.rs  output.rs  routing.rs  suggest.rs  types.rs
crates/accelmars-gateway/src/: auth.rs  canary.rs  concurrency.rs  config.rs  cost.rs  lib.rs  main.rs  openai.rs  pid.rs  registry.rs  router.rs  server.rs  telemetry.rs
crates/accelmars-gateway/src/adapters/: claude.rs  deepseek.rs  fixture.rs  gemini.rs  groq.rs  minimax.rs  mod.rs  moonshot.rs  nvidia.rs  openai.rs  openai_compat.rs  openrouter.rs  qwen.rs  recorded.rs  stepfun.rs  zhipu.rs
crates/accelmars-gateway/src/cli/: complete.rs  demo.rs  keys.rs  mod.rs  stats.rs  status.rs  stop.rs
crates/accelmars-gateway/tests/: replay_test.rs  server_test.rs
docs/: ADDING-A-PROVIDER.md  CASSETTE-SPEC.md  CLIENT-INTEGRATION.md  MIGRATING-FROM-OPENAI.md  OBSERVABILITY.md  TESTING.md
examples/cassettes/: basic.json  constraint_routing.json  multi_tier.json  openai_sdk.json  streaming.json  test_with_mock.json
examples/community-provider/: Cargo.toml  README.md
examples/community-provider/src/: lib.rs
examples/python/: README.md  basic.py  constraint_routing.py  multi_tier.py  openai_sdk.py  streaming.py  test_with_mock.py
examples/rust/: Cargo.toml  README.md
examples/ts/: README.md  basic.ts  package-lock.json  package.json  streaming.ts
tests/fixtures/: claude-streaming-success.json  deepseek-streaming-success.json  error-rate-limit.json  gemini-quick-hello.json  gemini-streaming-success.json  minimax-stub.json  moonshot-stub.json  multi-turn.json  nvidia-stub.json  openai-stub.json  qwen-stub.json  stepfun-stub.json  zhipu-stub.json
