[workspace]
members = ["crates/accelmars-gateway-core", "crates/accelmars-gateway"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/accelmars/gateway"
authors = ["AccelMars Co., Ltd."]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
