[package]
name = "accelmars-gateway-core"
description = "Core traits and types for the AccelMars AI gateway — zero provider SDK dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
