[package]
name = "accelmars-gateway"
description = "Universal AI gateway binary — multi-provider, OpenAI-compatible, Rust-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "accelmars_gateway"
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
accelmars-gateway-core = { path = "../accelmars-gateway-core" }
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
