[package]
name = "accelmars-gateway"
description = "Universal AI gateway binary — multi-provider, OpenAI-compatible, Rust-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ai", "llm", "openai", "gateway", "proxy"]
categories = ["web-programming::http-server", "command-line-utilities", "network-programming"]

[lib]
name = "accelmars_gateway"
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
accelmars-gateway-core = { path = "../accelmars-gateway-core" }
anyhow = "1"
config = { version = "0.14", features = ["toml"] }
thiserror = "2"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
integration-tests = []
record-fixtures = []

[dev-dependencies]
