[package]
name = "gateway-examples-rust"
version = "0.1.0"
edition = "2021"
description = "Rust examples for AccelMars Gateway"
publish = false

[[bin]]
name = "basic"
path = "src/bin/basic.rs"

[[bin]]
name = "streaming"
path = "src/bin/streaming.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
bytes = "1"

[workspace]
